--- a/product-service-dev.yaml
+++ b/product-service-dev.yaml
@@ -17,7 +17,7 @@ management:
         - "*"
 springdoc:
   swagger-ui:
-    path: coupon-swagger-ui
+    path: product-swagger-ui
 spring:
   zipkin:
     base-url: http://127.0.0.1:9411/
