--- a/product-service-prod.yaml
+++ b/product-service-prod.yaml
@@ -1,6 +1,13 @@
-server:
-  servlet:
-    context-path: /test
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/mydb
+    username: root
+    password: root
+  jpa:
+   hibernate:
+    ddl-auto: update
+  zipkin:
+    base-url: http://127.0.0.1:9411/
 eureka:
   client:
     register-with-eureka: true
@@ -17,7 +24,4 @@ management:
         - "*"
 springdoc:
   swagger-ui:
-    path: coupon-swagger-ui
-spring:
-  zipkin:
-    base-url: http://127.0.0.1:9411/
+    path: product-swagger-ui
